crates/ink/tests/ui/contract/fail/trait-message-selector-overlap-3.stderr
error[E0119]: conflicting implementations of trait `DispatchableMessageInfo<42>` for type `Contract`
  --> tests/ui/contract/fail/trait-message-selector-overlap-3.rs:41:9
   |
36 |         fn message1(&self) {}
   |         --------------------- first implementation here
...
41 |         fn message2(&self) {}
   |         ^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Contract`

error[E0119]: conflicting implementations of trait `TraitCallForwarderFor<42>` for type `contract::_::CallBuilder`
  --> tests/ui/contract/fail/trait-message-selector-overlap-3.rs:39:5
   |
34 | /     impl TraitDefinition1 for Contract {
35 | |         #[ink(message)]
36 | |         fn message1(&self) {}
37 | |     }
   | |_____- first implementation here
38 |
39 | /     impl TraitDefinition2 for Contract {
40 | |         #[ink(message)]
41 | |         fn message2(&self) {}
42 | |     }
   | |_____^ conflicting implementation for `contract::_::CallBuilder`
